# AxelSTT

./: pyproject.toml
src/: networks.py
src/axeltt/: __init__.py
src/axeltt/pl/: __init__.py  _plot_utils.py  networks.py
src/axeltt/tl/: _construct_landscape.py  _dynamical_analysis.py
