[project]
name = "axeltt"
version = "0.1.0"
description = "Revamp of Peijie Zhou's and Federico Bocci's STT to work with newer versions of Python."
authors = [
    {name = "axelalmet",email = "axelalmet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "anndata (>=0.11.4,<0.12.0)",
    "cellrank (>=2.0.7,<3.0.0)",
    "scanpy (>=1.11.1,<2.0.0)",
    "scvelo (>=0.3.3,<0.4.0)",
    "gseapy (>=1.1.8,<2.0.0)",
    "adjusttext (>=1.3.0,<2.0.0)",
    "deeptime (>=0.4.5,<0.5.0)",
    "networkx (>=3.4.2,<4.0.0)"
]

[tool.poetry]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
